cabal-version:      2.4
name:               langs-bench-dijkstra
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             reki2000
maintainer:         2533597+reki2000@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable main
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    MapLoader, Graph

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      containers ^>=0.6.5.1,
                      split ^>=0.2.3.4,
                      bytestring ^>=0.10.12.0,
                      vector ^>=0.13.0.0,
                      pqueue ^>=1.4.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
